--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<a href="https://tame-gold-trout-slip.cyclic.app/viewData">View Sales Data</a>
+<a href="https://tame-gold-trout-slip.cyclic.app/filterViewData">View Filter Data</a>
+<a href="https://tame-gold-trout-slip.cyclic.app/search/invoiceNo">Serch trough invoice Number</a>
+<a href="https://tame-gold-trout-slip.cyclic.app/search/ProductLine"><serch using productLine/a>
+<a href="https://tame-gold-trout-slip.cyclic.app/users">All Users</a>
