--- a/views/viewdata.hbs
+++ b/views/viewdata.hbs
@@ -28,7 +28,7 @@
                         <td>{{CustomerType}}</td>
                         <td>{{ProductLine}}</td>
                         <td>{{name}}</td>
-                        <td>{{image}}</td>
+                        <td><td><img src={{image}} width="100px" height="100px"/></td></td>
                         <td>{{Unitprice}}</td>
                         <td>{{Quantity}}</td>
                         <td>{{Tax5}}</td>
