--- a/views/onlySalesData.hbs
+++ b/views/onlySalesData.hbs
@@ -27,7 +27,7 @@
                 <td>{{data.CustomerType}}</td>
                 <td>{{data.ProductLine}}</td>
                 <td>{{data.name}}</td>
-                <td>{{data.image}}</td>
+                <td><img src={{data.image}} width="100px" height="100px"/></td>
                 <td>{{data.Unitprice}}</td>
                 <td>{{data.Quantity}}</td>
                 <td>{{data.Tax5}}</td>
